crates/aether-data-derive/tests/ui/rejects_ctx_param.stderr
error: transforms cannot call host functions or access handler context -- see ADR-0048
  --> tests/ui/rejects_ctx_param.rs:16:13
   |
16 |     let _ = aether_actor::Ctx::nothing();
   |             ^^^^^^^^^^^^
